# Rust-Learning-Project.

./: .gitignore  README.md  command.md  projects.md
CP_with_rust/: cp1  cp1.rs  cp10.rs  cp2.rs  cp3.rs  cp4.rs  cp5.rs  cp6.rs  cp7.rs  cp8.rs
stdio_understanding/: Cargo.toml  README.md  memory_demo  memory_validator
stdio_understanding/docs/: 00_foundations.md
stdio_understanding/src/: main.rs  memory_demo.rs  memory_validator.rs
stdio_understanding/src/examples/: ex01_basic_stdio.rs  ex02_stderr_demo.rs  ex03_buffering.rs  ex04_file_io.rs  ex05_pipes.rs  ex_06_flushing.rs
weather-dashboard/: Cargo.toml
weather-dashboard/src/: client.rs  error.rs  main.rs  models.rs
