[package]
name = "weather-dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
dotenvy = "0.15"

[dev-dependencies]
mockito = "1.2"
tokio-test = "0.4"
